--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -2,7 +2,7 @@
 	<section id="section-rodape">
 
 		<footer>
-			<p>© 2023 Infinity Tech</p>
+			<p style="margin-right: 60px;">© 2023 Infinity Tech</p>
 		</footer>
 
 	</section>
