--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,20 +5,20 @@
 
 		<br>
 
-		<form class="row g-3">
+		<form class="row g-3" #loginForm="ngForm" (ngSubmit)="submit()">
 
 				<label for="staticUsuario" class="visually-hidden">Usuário</label>
-				<input type="text" name="usuario" [(ngModel)] = "usuario" class="form-control" id="staticUsuario" placeholder="e-mail ou CPF">
+				<input type="text" name="usuario" required [(ngModel)]="login.email" class="form-control" id="staticUsuario" placeholder="e-mail ou CNPJ">
 
 	  	<br>
 
 				<label for="inputPassword2" class="visually-hidden">Senha</label>
-				<input type="password" name="senha" [(ngModel)] = "senha" class="form-control" id="inputPassword2" placeholder="senha">
+				<input type="password" name="senha" required [(ngModel)]="login.senha" class="form-control" id="inputPassword2" placeholder="senha">
 
 			<br>
 				<div class="buttons">
 					<button type="submit" class="btn btn-primary mb-3" routerLink="/cadastro" style="width: 150px; background-color: red;">Cadastro</button>
-				  <button type="submit" class="btn btn-primary mb-3" (click)="fazerLogin()" style="width: 150px;">Login</button>
+				  <button type="submit" class="btn btn-primary mb-3" routerLink="/restrito/lista" [disabled]="!loginForm.form.valid" style="width: 150px;">Login</button>
 				</div>
 
 
