--- a/src/app/portal/portal.component.html
+++ b/src/app/portal/portal.component.html
@@ -1,3 +1,3 @@
-<app-menu-portal *ngIf="mostrarMenu"></app-menu-portal>
+<app-menu-portal></app-menu-portal>
 <app-card></app-card>
 <router-outlet></router-outlet>
