--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,5 @@
 <main>
 	<section id="menu">
-		<p>
 			<mat-toolbar>
 				<span><img src="./assets/img/logo.png" alt=""></span>
 				<span class="logo-spacer"></span>
@@ -8,7 +7,6 @@
 				<span class="button-spacer"></span>
 				<span><a routerLink="/portal"><button mat-raised-button color="primary" style="border-radius: 60px; background-color: #15CBCA; color: white;">Entrar no site</button></a></span>
 			</mat-toolbar>
-		</p>
 	</section>
 
   <section id="section-banner">
@@ -66,7 +64,7 @@
       <h1>Para ONG's e profissionais voluntários</h1>
       <p>
         Quer divulgar seu serviço em nosso portal? <strong>Nós exibimos na plataforma</strong> os
-        serviços prestados por ONG's e profissionais voluntários voltados para saúde. Cadastre-se e divulgue
+        serviços prestados por ONG's voltadas para saúde. Cadastre-se e divulgue
         seu serviço gratuito aqui!
       </p>
       <span style="margin-left: 630px;"><a href="/login"><button mat-raised-button color="primary" style="padding-top: 10px; padding-bottom: 10px; font-family: 'Segoe UI'; font-size: 20px; border-radius: 60px; background-color: #15CBCA; color: white;">Entrar no portal para ONGs e profissionais voluntários</button></a></span>
