--- a/src/app/portal/menu-portal/menu-portal.component.html
+++ b/src/app/portal/menu-portal/menu-portal.component.html
@@ -1,10 +1,10 @@
 <p>
   <mat-toolbar>
-    <span><img src="./assets/img/logo.png" alt=""></span>
+    <span><a routerLink="/inicio"><button mat-raised-button style="border-radius: 60px; background-color: #15CBCA; color: white;">Voltar a tela inicial</button></a></span>
     <span class="logo-spacer"></span>
-    <span><a routerLink='' style="font-family: 'Segoe UI'; font-size: 24px; margin-left: 650px;">Free Social Services</a></span>
+    <span><a routerLink='' style="font-family: 'Segoe UI'; font-size: 24px; margin-left: 580px;">Free Social Services</a></span>
     <span class="button-spacer"></span>
-    <span><a routerLink="/login"><button mat-raised-button style="border-radius: 60px; background-color: #15CBCA; color: white;">Portal para ONG's e voluntários</button></a></span>
+    <span><a routerLink="/login"><button mat-raised-button style="border-radius: 60px; background-color: #15CBCA; color: white;">Portal para ONG's</button></a></span>
   </mat-toolbar>
 </p>
 
