--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
 		<form class="row g-3" #loginForm="ngForm" (ngSubmit)="submit()">
 
 				<label for="staticUsuario" class="visually-hidden">Usuário</label>
-				<input type="text" name="usuario" required [(ngModel)]="login.email" class="form-control" id="staticUsuario" placeholder="e-mail ou CNPJ">
+				<input type="text" name="usuario" required [(ngModel)]="login.email" class="form-control" id="staticUsuario" placeholder="e-mail">
 
 	  	<br>
 
