Adiciona novos media queries ao site

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <main>
 	<section id="menu">
-			<mat-toolbar>
+			<mat-toolbar class="toolbar">
 				<span><img src="./assets/img/logo.png" alt=""></span>
 				<span class="logo-spacer"></span>
 				<span><a routerLink='' style="font-family: 'Segoe UI'; font-size: 24px;">Free Social Services</a></span>
@@ -26,24 +26,7 @@
           <img src="assets/img/banner3.png" class="d-block w-100" alt="..." />
         </div>
       </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+
     </div>
   </section>
 
@@ -67,7 +50,7 @@
         serviços prestados por ONG's voltadas para saúde. Cadastre-se e divulgue
         seu serviço gratuito aqui!
       </p>
-      <span style="margin-left: 630px;"><a href="/login"><button mat-raised-button color="primary" style="padding-top: 10px; padding-bottom: 10px; font-family: 'Segoe UI'; font-size: 20px; border-radius: 60px; background-color: #15CBCA; color: white;">Entrar no portal para ONGs e profissionais voluntários</button></a></span>
+      <span><a href="/login"><button mat-raised-button color="primary" style="padding-top: 10px; padding-bottom: 10px; font-family: 'Segoe UI'; font-size: 20px; border-radius: 60px; background-color: #15CBCA; color: white;">Entrar no portal para ONGs e profissionais voluntários</button></a></span>
     </div>
   </section>
 
@@ -80,4 +63,11 @@
 		</div>
 	</section>
 
+	<section id="section-rodape">
+
+		<footer>
+			<p style="margin-right: 70px;">© 2023 Infinity Tech</p>
+		</footer>
+
+	</section>
 </main>
