--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -18,3 +18,9 @@ h1 {
 	margin-top: 50px;
 	margin-bottom: 10px;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 768px){
+	#section-cadastro {
+		width: 95%;
+	}
+}
