--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,5 +1,7 @@
 main{
-  min-height: 500px;
+  display: block;
+	width: 100%;
+	height: 100%;
 }
 
 .button-spacer {
@@ -40,11 +42,11 @@ a{
 }
 
 #quem-somos-section{
-  height: 281.5px;
+  min-height: 281.5px;
 }
 
 .quem-somos > h1{
-  padding-top: 90px;
+  margin-top: 60px;
   text-align: center;
   font-family: 'Segoe UI';
   font-weight: bold;
@@ -53,7 +55,7 @@ a{
 }
 
 .quem-somos > p{
-  padding-top: 30px;
+  margin-top: 30px;
   text-align: center;
   font-family: 'Segoe UI';
   font-size: 27px;
@@ -62,11 +64,11 @@ a{
 }
 
 #para-quem-section{
-  height: 450.25px
+  min-height: 450.25px
 }
 
 .para-empresas-ongs > h1{
-  padding-top: 160px;
+	margin-bottom: 30px;
   text-align: center;
   font-family: 'Segoe UI';
   font-weight: bold;
@@ -75,7 +77,7 @@ a{
 }
 
 .para-empresas-ongs > p{
-  padding-top: 30px;
+  margin-top: 30px;
   text-align: center;
   font-family: 'Segoe UI';
   font-size: 27px;
@@ -83,12 +85,16 @@ a{
   max-width: 1000px;
 }
 
+.para-empresas-ongs > span{
+	margin-left: 630px;
+}
+
 #prestacao-servicos-section{
-  height: 400.5px;
+  min-height: 400.5px;
 }
 
 .prestacao-servicos > h1{
-  padding-top: 90px;
+  margin-top: 10px;
   text-align: center;
 	margin-right: 40px;
   font-family: 'Segoe UI';
@@ -98,10 +104,264 @@ a{
 }
 
 .prestacao-servicos > p{
-  padding-top: 30px;
+  margin-top: 30px;
   text-align: center;
   font-family: 'Segoe UI';
   font-size: 27px;
   margin-left: 400px;
   max-width: 1000px;
 }
+
+footer{
+	background: #15CBCA;
+	color: white;
+	text-align: center;
+	text-decoration: underline;
+	height: 100px;
+	padding-top: 30px;
+}
+
+
+/*Seção media query*/
+@media only screen and (min-width: 360px) and (max-width: 768px){
+	.toolbar{
+		width: 1180px;
+	}
+
+	.carousel-inner{
+		width: 1180px; /*desativar*/
+	}
+
+	.quem-somos > h1{
+		width: 400px;
+		margin-left: 400px;
+	}
+
+	.quem-somos > p{
+		width: 500px;
+		margin-left: 350px;
+	}
+
+	.para-empresas-ongs > h1{
+		width: 800px;
+		margin-left: 200px;
+	}
+
+	.para-empresas-ongs > p{
+		width: 700px;
+		margin-left: 250px;
+	}
+
+	.para-empresas-ongs > span{
+		margin-left: 330px;
+	}
+
+	.prestacao-servicos > h1{
+		width: 800px; /*desativar*/
+		margin-left: 200px;
+	}
+
+	.prestacao-servicos > p{
+		width: 700px;
+		margin-left: 240px;
+	}
+
+	footer{
+		width: 1180px;
+	}
+}
+@media only screen and (min-width: 576px) and (max-width: 768px){
+	.toolbar{
+		width: 1180px;
+	}
+
+	.carousel-inner{
+		width: 1180px;
+	}
+
+	.quem-somos > h1{
+		width: 400px;
+		margin-left: 380px;
+	}
+
+	.quem-somos > p{
+		width: 500px;
+		margin-left: 320px;
+	}
+
+	.para-empresas-ongs > h1{
+		width: 800px;
+		margin-left: 170px;
+	}
+
+	.para-empresas-ongs > p{
+		width: 600px;
+		margin-left: 280px;
+	}
+
+	.para-empresas-ongs > span{
+		margin-left: 300px;
+	}
+
+	.prestacao-servicos > h1{
+		width: 800px;
+		margin-left: 170px;
+	}
+
+	.prestacao-servicos > p{
+		width: 600px;
+		margin-left: 280px;
+	}
+
+	footer{
+		width: 1180px;
+	}
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+	.toolbar{
+		width: 1170px;
+	}
+
+	.carousel-inner{
+		width: 1170px;
+	}
+
+	.quem-somos > h1{
+		margin-left: 400px;
+		width: 400px;
+	}
+
+	.quem-somos > p{
+		margin-left: 300px;
+		width: 600px;
+	}
+
+	.para-empresas-ongs > h1{
+		margin-left: 200px;
+		width: 800px;
+	}
+
+	.para-empresas-ongs > p{
+		margin-left: 300px;
+		width: 600px;
+	}
+
+	.para-empresas-ongs > span{
+		margin-left: 330px;
+	}
+
+	.prestacao-servicos > h1{
+		width: 600px;
+		margin-left: 300px;
+	}
+
+	.prestacao-servicos > p{
+		width: 600px;
+		margin-left: 300px;
+	}
+
+	footer{
+		width: 1170px;
+	}
+}
+
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+
+	.toolbar{
+		width: 1700px;
+	}
+
+	.carousel-inner{
+		width: 1700px;
+	}
+
+	.quem-somos > h1{
+		margin-left: 600px;
+		width: 500px;
+	}
+
+	.quem-somos > p{
+		width: 700px;
+		margin-left: 480px;
+	}
+
+	.para-empresas-ongs > h1{
+		margin-top: 60px;
+		width: 800px;
+		margin-left: 440px;
+	}
+
+	.para-empresas-ongs > p{
+		width: 700px;
+		margin-left: 450px;
+	}
+
+	.para-empresas-ongs > span{
+		margin-left: 536px;
+	}
+
+	.prestacao-servicos > h1{
+		width: 800px;
+		margin-left: 420px;
+	}
+
+	.prestacao-servicos > p{
+		width: 800px;
+		margin-left: 400px;
+	}
+
+	footer{
+		width: 1700px;
+	}
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1839px) {
+	.toolbar{
+		width: 1870px;
+	}
+
+	.carousel-inner{
+		width: 1870px;
+	}
+
+	.quem-somos > h1{
+		width: 800px;
+		margin-left: 500px;
+	}
+	.quem-somos > p{
+		width: 800px;
+		margin-left: 500px;
+	}
+
+	.para-empresas-ongs > h1{
+		width: 800px;
+		margin-left: 500px;
+	}
+
+	.para-empresas-ongs > p{
+		width: 800px;
+		margin-left: 500px;
+	}
+
+	.para-empresas-ongs > span{
+		margin-left: 620px;
+	}
+
+	.prestacao-servicos > h1{
+		width: 800px;
+		margin-left: 500px;
+	}
+	.prestacao-servicos > p{
+		width: 800px;
+		margin-left: 500px;
+	}
+
+	footer{
+		width: 1870px;
+	}
+}
+
+
+
