--- a/src/app/portal/card/card.component.html
+++ b/src/app/portal/card/card.component.html
@@ -1,6 +1,6 @@
 <main>
 	<section id="section-card" style="min-height: 1000px; min-width: 1000px;">
-		<div class="cards" style="margin-top: 100px; margin-left: 200px">
+		<div class="cards">
 			<nav id="card-row">
 				<mat-card
 					class="example-card"
@@ -75,5 +75,13 @@
 				</mat-card>
 			</nav>
 		</div>
+	</section>
+
+	<section id="section-rodape">
+
+		<footer>
+			<p style="margin-right: 70px;">© 2023 Infinity Tech</p>
+		</footer>
+
 	</section>
 </main>
