--- a/src/app/restrito/cadastrar-card/cadastrar-card.component.css
+++ b/src/app/restrito/cadastrar-card/cadastrar-card.component.css
@@ -1,11 +1,9 @@
 main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	min-height: 500px;
 }
 
 h1 {
+	width: 500px;
 	margin-top: 20px;
 }
 
@@ -18,3 +16,47 @@ h1 {
 	margin-top: 50px;
 	margin-bottom: 10px;
 }
+@media only screen and (min-width: 576px) and (max-width: 768px){
+	h1{
+		width: 500px;
+		margin-left: 1400px;
+	}
+
+	#section-cadastro{
+		margin-left: 1200px;
+		width: 700px;
+	}
+}
+@media only screen and (min-width: 768px) and (max-width: 992px){
+	h1{
+		width: 500px;
+		margin-left: 1200px;
+	}
+
+	#section-cadastro{
+		margin-left: 950px;
+		width: 700px;
+	}
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+	h1{
+		width: 300px;
+		margin-left: 800px;
+	}
+	#section-cadastro {
+		width: 700px;
+		margin-left: 800px;
+	}
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1839) {
+	h1{
+		width: 200px;
+		margin-left: 800px;
+	}
+	#section-cadastro {
+		width: 700px;
+		margin-left: 600px;
+	}
+}
+
